13/5/2018 1.7.4.4

    user visible changes:
    * utils.download_and_cache_file_or_url: fixed case where cached checksum file exists but has wrong checksum.
           now such file will be erased. Also handle cases where cache folder is a file or does not exist.
    * removed some asserts

    admin visible changes:
    * InstlAdmin replaced many print's with self.progress
    * IGNORE_BELOW_REPO_REV new configVar can be used to specify repo-rev that will be ignored by InstAdmin operations.

10/5/2018 1.7.4.2

    admin visible changes:
    * some changes to the way the db is opened in order to allow separate launches of instl to use the same db, when specifying --db option on the command line
    * commands read-info-map, read-yaml now accept --db option on the command line
    * filter-infomap command: fix the case where the same path belonged to more than 1 IID in the same infomap and would appear twice in the infomap

9/5/2018 1.7.4.1

    user visible changes:
    * print repo-rev to self.progress after reading index

    admin visible changes:
    * removed the option of 'destination' with __include__ - it only caused trouble

    programmer visible changes:
    * utils.download_from_file_or_url if in_target_path is not provided use cache_folder so that .wzip files have a folder to be decompressed to

8/8/2018 1.7.4.0

    user visible changes:
    * new command wzip - will zip a single file
    * better welcome message with version
    * PlatformSpecificHelperWin.init_platform_tools will not look for download tool is configVat DOWNLOAD_TOOL_PATH is not defined
        this will avoid excption in commands such as uninstall that do not need download tool anyway
    * changed WZLIB_EXTENSION defualt value to .wzip
    * do not unwtar files who's name begin with ._ - these are phantom files created by zip/unzip on Mac